--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lint:eslint": "eslint . --fix --cache"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "pinia": "^3.0.4",
+    "sortablejs": "^1.15.6",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
     "vue-router": "^5.0.1"
   },
